[gd_scene load_steps=14 format=2]

[ext_resource path="res://player/player.png" type="Texture" id=1]
[ext_resource path="res://player/player.gd" type="Script" id=2]
[ext_resource path="res://player/scripts/target_rotate.gd" type="Script" id=3]
[ext_resource path="res://player/scripts/two_bone_ik.gd" type="Script" id=4]
[ext_resource path="res://player/scripts/handle.gd" type="Script" id=5]
[ext_resource path="res://player/scripts/cursor.gd" type="Script" id=6]
[ext_resource path="res://player/cursor.png" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 2.0
height = 10.0

[sub_resource type="PhysicsMaterial" id=6]
rough = true
absorbent = true

[sub_resource type="CapsuleShape2D" id=7]
radius = 2.0
height = 12.0

[sub_resource type="CircleShape2D" id=8]
radius = 3.0

[sub_resource type="CircleShape2D" id=9]
radius = 4.0

[node name="Player" type="Node2D"]
script = ExtResource( 2 )

[node name="Chest" type="RigidBody2D" parent="."]
collision_layer = 0
mass = 2.0
can_sleep = false

[node name="BaseSprite" type="Sprite" parent="Chest"]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 32, 32, 32, 32 )

[node name="OutlineSprite" type="Sprite" parent="Chest"]
z_index = -1
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 32, 32, 32 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Chest"]
polygon = PoolVector2Array( -5, -7, 5, -7, 5, 3, 2, 7, -2, 7, -5, 3 )

[node name="Head" type="RigidBody2D" parent="."]
position = Vector2( 0, -12 )
collision_layer = 0
can_sleep = false
script = ExtResource( 3 )
target_node = NodePath("../Chest")
target_speed = 5.0

[node name="BaseSprite" type="Sprite" parent="Head"]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 32, 0, 32, 32 )

[node name="OutlineSprite" type="Sprite" parent="Head"]
z_index = -1
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
shape = SubResource( 2 )

[node name="PinJoint2D" type="PinJoint2D" parent="Head"]
position = Vector2( 0, 5 )
node_a = NodePath("..")
node_b = NodePath("../../Chest")

[node name="IKArm" type="Node2D" parent="."]
position = Vector2( 0, -4 )
rotation = 1.57079
script = ExtResource( 4 )
upper_arm = NodePath("UpperArm")
upper_length = 11.0
lower_arm = NodePath("LowerArm")
lower_length = 12.0

[node name="UpperArm" type="RigidBody2D" parent="IKArm"]
position = Vector2( 4, 0 )
collision_layer = 0
can_sleep = false
script = ExtResource( 3 )

[node name="BaseSprite" type="Sprite" parent="IKArm/UpperArm"]
position = Vector2( 3.62396e-05, 3.62396e-05 )
rotation = -1.57079
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 32, 64, 32, 32 )

[node name="OutlineSprite" type="Sprite" parent="IKArm/UpperArm"]
position = Vector2( 3.62396e-05, 3.62396e-05 )
rotation = -1.57079
z_index = -1
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 64, 32, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="IKArm/UpperArm"]
position = Vector2( 3.62396e-05, 3.62396e-05 )
rotation = -1.57079
shape = SubResource( 5 )

[node name="PinJoint2D" type="PinJoint2D" parent="IKArm/UpperArm"]
position = Vector2( -4, 0 )
node_a = NodePath("..")
node_b = NodePath("../../../Chest")

[node name="LowerArm" type="RigidBody2D" parent="IKArm"]
position = Vector2( 18, 0 )
collision_layer = 0
physics_material_override = SubResource( 6 )
can_sleep = false
script = ExtResource( 3 )

[node name="BaseSprite" type="Sprite" parent="IKArm/LowerArm"]
rotation = -1.57079
texture = ExtResource( 1 )
offset = Vector2( 0, -1 )
region_enabled = true
region_rect = Rect2( 32, 96, 32, 32 )

[node name="OutlineSprite" type="Sprite" parent="IKArm/LowerArm"]
rotation = -1.57079
z_index = -1
texture = ExtResource( 1 )
offset = Vector2( 0, -1 )
region_enabled = true
region_rect = Rect2( 0, 96, 32, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="IKArm/LowerArm"]
rotation = -1.57079
shape = SubResource( 7 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="IKArm/LowerArm"]
position = Vector2( 6, 1.33276e-05 )
rotation = -1.57079
shape = SubResource( 8 )

[node name="PinJoint2D" type="PinJoint2D" parent="IKArm/LowerArm"]
position = Vector2( -7, 0 )
rotation = -1.57079
node_a = NodePath("..")
node_b = NodePath("../../UpperArm")

[node name="HandleArea2D" type="Area2D" parent="IKArm/LowerArm"]
position = Vector2( 6, 0 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="IKArm/LowerArm/HandleArea2D"]
shape = SubResource( 9 )

[node name="PinJoint2D" type="PinJoint2D" parent="IKArm/LowerArm/HandleArea2D"]
node_a = NodePath("../..")
disable_collision = false

[node name="World" type="Node" parent="."]

[node name="Cursor" type="Sprite" parent="World"]
z_index = 1
texture = ExtResource( 7 )
script = ExtResource( 6 )
root_node = NodePath("../../IKArm/UpperArm/PinJoint2D")
target_node = NodePath("../../IKArm")
